--- a/app/src/main/res/layout/activity_reset_password.xml
+++ b/app/src/main/res/layout/activity_reset_password.xml
@@ -2,15 +2,19 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/white"
     android:orientation="vertical">
 
-    <include layout="@layout/comm_black_toolbar" />
+    <include layout="@layout/white_toolbar" />
+
+    <include layout="@layout/divider_shawdow_white" />
 
     <LinearLayout
-        android:layout_width="300dp"
+        android:layout_width="match_parent"
         android:layout_height="44dp"
-        android:background="@drawable/login_edit_text_bg"
         android:layout_gravity="center_horizontal"
+        android:layout_marginLeft="27dp"
+        android:layout_marginRight="27dp"
         android:layout_marginTop="24dp"
         android:gravity="center_vertical"
         android:orientation="horizontal">
@@ -18,20 +22,14 @@
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="15dp"
-            android:src="@drawable/ic_register_email" />
+            android:src="@drawable/ic_login_code" />
 
-        <View
-            android:layout_width="1dp"
-            android:layout_height="23dp"
-            android:layout_marginLeft="6dp"
-            android:background="@color/colorCommNotActive" />
 
         <EditText
             android:id="@+id/et_verify_code"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginLeft="16dp"
+            android:layout_marginLeft="14dp"
             android:layout_weight="1"
             android:background="@null"
             android:gravity="center_vertical"
@@ -43,45 +41,49 @@
 
         <Button
             android:id="@+id/btn_get_verify_code"
-            android:layout_width="90dp"
-            android:layout_height="match_parent"
-            android:layout_marginTop="1dp"
-            android:layout_marginRight="1dp"
+            style="@style/Base.Widget.AppCompat.Button.Borderless"
+            android:layout_width="89dp"
+            android:layout_height="27dp"
             android:layout_marginBottom="1dp"
+            android:layout_marginTop="1dp"
             android:layout_weight="0"
             android:background="@drawable/selector_register_verify_code_bg"
             android:text="@string/get_verify_code"
+            android:textAllCaps="false"
             android:textColor="#FEFEFE"
-            android:textSize="14sp" />
+            android:textSize="11sp" />
     </LinearLayout>
 
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:layout_marginLeft="27dp"
+        android:layout_marginRight="27dp"
+        android:background="#f0f0f0" />
+
     <LinearLayout
-        android:layout_width="300dp"
+        android:layout_width="match_parent"
         android:layout_height="44dp"
         android:layout_gravity="center_horizontal"
+        android:layout_marginLeft="27dp"
+        android:layout_marginRight="27dp"
         android:layout_marginTop="16dp"
-        android:background="@drawable/login_edit_text_bg"
         android:gravity="center_vertical"
         android:orientation="horizontal">
 
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="15dp"
-            android:src="@drawable/ic_login_lock" />
+            android:src="@drawable/ic_login_psw" />
 
-        <View
-            android:layout_width="1dp"
-            android:layout_height="23dp"
-            android:layout_marginLeft="9dp"
-            android:background="@color/colorCommNotActive" />
 
         <EditText
             android:id="@+id/et_password"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_gravity="center_vertical"
-            android:layout_marginLeft="16dp"
+            android:layout_marginLeft="14dp"
+            android:layout_weight="1"
             android:background="@null"
             android:hint="@string/input_new_psw"
             android:inputType="textPassword"
@@ -89,40 +91,50 @@
             android:textColorHint="#B9B9B9"
             android:textSize="14sp" />
 
+        <ImageView
+            android:id="@+id/ib_new_psw"
+            android:layout_width="22dp"
+            android:layout_height="15dp"
+            android:scaleType="fitXY"
+            android:src="@drawable/selector_login_clean_psw"
+            android:visibility="gone" />
     </LinearLayout>
 
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:layout_marginLeft="27dp"
+        android:layout_marginRight="27dp"
+        android:background="#f0f0f0" />
+
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
+        android:layout_marginLeft="27dp"
+        android:layout_marginRight="27dp"
         android:layout_marginTop="16dp"
         android:orientation="vertical">
 
         <LinearLayout
-            android:layout_width="300dp"
+            android:layout_width="match_parent"
             android:layout_height="44dp"
-            android:background="@drawable/login_edit_text_bg"
             android:gravity="center_vertical"
             android:orientation="horizontal">
 
             <ImageView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="15dp"
-                android:src="@drawable/ic_login_lock" />
+                android:src="@drawable/ic_login_psw" />
 
-            <View
-                android:layout_width="1dp"
-                android:layout_height="23dp"
-                android:layout_marginLeft="9dp"
-                android:background="@color/colorCommNotActive" />
 
             <EditText
                 android:id="@+id/et_password_again"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_gravity="center_vertical"
-                android:layout_marginLeft="16dp"
+                android:layout_marginLeft="14dp"
+                android:layout_weight="1"
                 android:background="@null"
                 android:hint="@string/input_psw_again"
                 android:inputType="textPassword"
@@ -130,7 +142,19 @@
                 android:textColorHint="#B9B9B9"
                 android:textSize="14sp" />
 
+            <ImageView
+                android:id="@+id/ib_confirm_psw"
+                android:layout_width="22dp"
+                android:layout_height="15dp"
+                android:scaleType="fitXY"
+                android:src="@drawable/selector_login_clean_psw"
+                android:visibility="gone" />
         </LinearLayout>
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="#f0f0f0" />
 
         <TextView
             android:id="@+id/tv_psw_msg"
@@ -146,14 +170,17 @@
 
     <Button
         android:id="@+id/btn_confirm_reset"
-        android:layout_width="300dp"
+        style="@style/Base.Widget.AppCompat.Button.Borderless"
+        android:layout_width="match_parent"
         android:layout_height="44dp"
         android:layout_gravity="center_horizontal"
+        android:layout_marginLeft="27dp"
+        android:layout_marginRight="27dp"
         android:layout_marginTop="25dp"
         android:background="@drawable/selector_comm_btn_bg"
         android:enabled="false"
         android:text="@string/confirm_reset"
-        android:textColor="@color/white"
-        android:textSize="18sp" />
+        android:textColor="@drawable/text_forget_psw"
+        android:textSize="17sp" />
 
 </LinearLayout>
