--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -247,5 +247,7 @@
     <color name="tab_color">#00000000</color>
 
     <color name="text_color_mine_pack">#70000000</color>
+    <color name="text_true_forget_psw">#010101</color>
+    <color name="text_false_forget_psw">#ffffff</color>
 
 </resources>
