--- a/app/src/main/res/layout/activity_live_display_new.xml
+++ b/app/src/main/res/layout/activity_live_display_new.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/draw_layout_out_live"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -28,7 +29,8 @@
                     android:id="@+id/ll_top_live"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:orientation="vertical">
+                    android:orientation="vertical"
+                    tools:ignore="MissingConstraints">
 
                     <RelativeLayout
                         android:id="@+id/rl_top"
@@ -63,8 +65,8 @@
                                     android:layout_width="50dp"
                                     android:layout_height="13dp"
                                     android:layout_marginLeft="6dp"
-                                    android:layout_marginRight="6dp"
                                     android:layout_marginTop="3dp"
+                                    android:layout_marginRight="6dp"
                                     android:ellipsize="end"
                                     android:singleLine="true"
                                     android:textColor="@color/white"
@@ -76,10 +78,10 @@
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
                                     android:layout_alignParentBottom="true"
-                                    android:layout_marginBottom="2dp"
                                     android:layout_marginLeft="6dp"
-                                    android:layout_marginRight="6dp"
                                     android:layout_marginTop="6.5dp"
+                                    android:layout_marginRight="6dp"
+                                    android:layout_marginBottom="2dp"
                                     android:singleLine="true"
                                     android:textColor="@color/white"
                                     android:textSize="10sp" />
@@ -211,8 +213,8 @@
                                 android:id="@+id/tv_run_way_gift"
                                 android:layout_width="1000dp"
                                 android:layout_height="20dp"
-                                android:layout_marginBottom="2dp"
                                 android:layout_marginLeft="5dp"
+                                android:layout_marginBottom="2dp"
                                 android:gravity="center_vertical"
                                 android:singleLine="true"
                                 android:textSize="12sp" />
@@ -295,7 +297,8 @@
                             android:visibility="gone"
                             app:layout_constraintHorizontal_bias="0.25"
                             app:layout_constraintLeft_toLeftOf="parent"
-                            app:layout_constraintRight_toRightOf="parent">
+                            app:layout_constraintRight_toRightOf="parent"
+                            tools:ignore="MissingConstraints">
 
                             <TextView
                                 android:id="@+id/tv_left_add_effect"
@@ -337,7 +340,8 @@
                             android:visibility="gone"
                             app:layout_constraintHorizontal_bias="0.75"
                             app:layout_constraintLeft_toLeftOf="parent"
-                            app:layout_constraintRight_toRightOf="parent">
+                            app:layout_constraintRight_toRightOf="parent"
+                            tools:ignore="MissingConstraints">
 
                             <TextView
                                 android:id="@+id/tv_right_add_effect"
@@ -493,7 +497,8 @@
                                 android:gravity="center_vertical"
                                 android:maxLines="1"
                                 android:textColor="#fffffa"
-                                android:textSize="12sp" />
+                                android:textSize="12sp"
+                                tools:ignore="MissingConstraints" />
                         </android.support.constraint.ConstraintLayout>
                     </RelativeLayout>
 
@@ -548,9 +553,9 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_alignParentBottom="true"
-                        android:layout_marginBottom="10dp"
                         android:layout_marginLeft="20dp"
                         android:layout_marginRight="20dp"
+                        android:layout_marginBottom="10dp"
                         android:visibility="gone" />
 
                     <TextView
@@ -584,10 +589,10 @@
                             android:id="@+id/cl_entenr"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:paddingBottom="6dp"
                             android:paddingLeft="40dp"
+                            android:paddingTop="35dp"
                             android:paddingRight="40dp"
-                            android:paddingTop="35dp">
+                            android:paddingBottom="6dp">
 
                             <com.whzl.mengbi.ui.widget.view.RoyalEnterView
                                 android:id="@+id/tv_enter"
@@ -596,7 +601,8 @@
                                 android:gravity="center_vertical"
                                 android:maxLines="1"
                                 android:textColor="#ffffff"
-                                android:textSize="12sp" />
+                                android:textSize="12sp"
+                                tools:ignore="MissingConstraints" />
                         </android.support.constraint.ConstraintLayout>
                     </LinearLayout>
 
@@ -650,10 +656,10 @@
                         android:id="@+id/view_message_notify"
                         android:layout_width="6dp"
                         android:layout_height="6dp"
-                        android:layout_alignRight="@id/btn_chat_private"
                         android:layout_alignTop="@id/btn_chat_private"
-                        android:layout_marginRight="2dp"
+                        android:layout_alignRight="@id/btn_chat_private"
                         android:layout_marginTop="2dp"
+                        android:layout_marginRight="2dp"
                         android:background="@drawable/shape_red_notify"
                         android:visibility="gone" />
 
@@ -743,18 +749,18 @@
                     android:layout_width="60dp"
                     android:layout_height="60dp"
                     android:layout_alignParentRight="true"
-                    android:layout_marginRight="9dp"
                     android:layout_marginTop="7dp"
+                    android:layout_marginRight="9dp"
                     app:layout_constraintRight_toRightOf="@id/rl_bottom_container"
                     app:layout_constraintTop_toBottomOf="@id/ratio_layout" />
 
                 <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_alignParentBottom="true"
                     android:layout_alignParentRight="true"
-                    android:layout_marginBottom="5dp"
+                    android:layout_alignParentBottom="true"
                     android:layout_marginRight="7dp"
+                    android:layout_marginBottom="5dp"
                     android:gravity="center_horizontal"
                     android:orientation="vertical"
                     app:layout_constraintBottom_toTopOf="@id/rl_bottom_container"
@@ -785,7 +791,8 @@
                     android:layout_marginTop="2dp"
                     android:background="@drawable/bg_broad_bottom_live"
                     android:visibility="gone"
-                    app:layout_constraintTop_toTopOf="@id/fragment_container">
+                    app:layout_constraintTop_toTopOf="@id/fragment_container"
+                    tools:ignore="MissingConstraints">
 
                     <ImageView
                         android:id="@+id/iv_broad_bottom"
@@ -803,10 +810,10 @@
                         android:layout_width="1000dp"
                         android:layout_height="wrap_content"
                         android:gravity="center_vertical"
-                        android:paddingBottom="3dp"
                         android:paddingLeft="7dp"
-                        android:paddingRight="7dp"
                         android:paddingTop="2dp"
+                        android:paddingRight="7dp"
+                        android:paddingBottom="3dp"
                         android:singleLine="true"
                         android:textSize="12sp"
                         android:visibility="visible"
@@ -819,8 +826,8 @@
                     android:id="@+id/rl_red_bag_live"
                     android:layout_width="35dp"
                     android:layout_height="42dp"
-                    android:layout_marginBottom="20dp"
                     android:layout_marginRight="12dp"
+                    android:layout_marginBottom="20dp"
                     android:visibility="gone"
                     app:layout_constraintBottom_toBottomOf="@id/ratio_layout"
                     app:layout_constraintRight_toRightOf="parent">
