--- a/app/src/main/res/layout/activity_live_display_new.xml
+++ b/app/src/main/res/layout/activity_live_display_new.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    <RelativeLayout
         android:id="@+id/lrl_live"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -278,11 +278,22 @@
                                 android:layout_height="wrap_content"
                                 android:layout_marginLeft="4dp"
                                 android:layout_marginRight="4dp"
+                                android:layout_weight="1"
                                 android:ellipsize="end"
                                 android:singleLine="true"
                                 android:textColor="@color/white"
                                 android:textSize="10sp" />
 
+                            <TextView
+                                android:id="@+id/btn_other_follow"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:background="@drawable/shape_live_follow_button"
+                                android:gravity="center"
+                                android:text="订阅"
+                                android:textColor="#323232"
+                                android:textSize="8sp"
+                                android:visibility="gone" />
                         </LinearLayout>
 
                         <LinearLayout
