--- a/app/src/main/res/drawable/shape_live_follow_button_other.xml
+++ b/app/src/main/res/drawable/shape_live_follow_button_other.xml
@@ -1,7 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid
-        android:color="#402a2e36"/>
-    <corners
-        android:radius="11dp"/>
+    <corners android:radius="10dp" />
+    <solid android:color="#ffd634" />
 </shape>
