--- a/app/src/main/res/layout/activity_live_display_new.xml
+++ b/app/src/main/res/layout/activity_live_display_new.xml
@@ -252,48 +252,52 @@
                             app:layout_constraintLeft_toLeftOf="parent"
                             app:layout_constraintRight_toLeftOf="parent" />
 
+
                         <LinearLayout
                             android:id="@+id/rl_other_side_info"
-                            android:layout_width="70dp"
-                            android:layout_height="20dp"
-                            android:layout_marginTop="10dp"
-                            android:background="@drawable/shape_other_side"
-                            android:gravity="center_vertical"
-                            android:orientation="horizontal"
+                            android:layout_width="0dp"
+                            android:layout_height="wrap_content"
+                            android:layout_marginTop="4dp"
                             android:visibility="gone"
-                            app:layout_constraintHorizontal_bias="0.65"
-                            app:layout_constraintLeft_toLeftOf="parent"
                             app:layout_constraintRight_toRightOf="parent"
-                            app:layout_constraintTop_toTopOf="parent">
+                            app:layout_constraintTop_toTopOf="parent"
+                            app:layout_constraintWidth_percent="0.5">
 
-                            <com.whzl.mengbi.ui.widget.view.CircleImageView
-                                android:id="@+id/circle_other_side"
-                                android:layout_width="20dp"
-                                android:layout_height="20dp"
-                                android:src="@color/white" />
-
-                            <TextView
-                                android:id="@+id/tv_other_side"
+                            <LinearLayout
                                 android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:layout_marginLeft="4dp"
-                                android:layout_marginRight="4dp"
-                                android:layout_weight="1"
-                                android:ellipsize="end"
-                                android:singleLine="true"
-                                android:textColor="@color/white"
-                                android:textSize="10sp" />
+                                android:layout_height="21dp"
+                                android:layout_marginLeft="2dp"
+                                android:background="@drawable/shape_other_side"
+                                android:gravity="center_vertical"
+                                android:orientation="horizontal">
 
-                            <TextView
-                                android:id="@+id/btn_other_follow"
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:background="@drawable/shape_live_follow_button"
-                                android:gravity="center"
-                                android:text="订阅"
-                                android:textColor="#323232"
-                                android:textSize="8sp"
-                                android:visibility="gone" />
+                                <TextView
+                                    android:id="@+id/tv_other_side"
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:layout_marginLeft="7dp"
+                                    android:layout_marginRight="7dp"
+                                    android:ellipsize="end"
+                                    android:maxWidth="53dp"
+                                    android:singleLine="true"
+                                    android:textColor="@color/white"
+                                    android:textSize="9sp"
+                                    android:textStyle="bold" />
+
+                                <TextView
+                                    android:id="@+id/btn_other_follow"
+                                    android:layout_width="29dp"
+                                    android:layout_height="19dp"
+                                    android:layout_marginTop="1dp"
+                                    android:layout_marginRight="1dp"
+                                    android:layout_marginBottom="1dp"
+                                    android:background="@drawable/shape_live_follow_button_other"
+                                    android:gravity="center"
+                                    android:text="订阅"
+                                    android:textColor="#000000"
+                                    android:textSize="9sp"
+                                    android:visibility="gone" />
+                            </LinearLayout>
                         </LinearLayout>
 
                         <LinearLayout
