--- a/app/src/main/res/drawable/selector_login_verify_code.xml
+++ b/app/src/main/res/drawable/selector_login_verify_code.xml
@@ -3,7 +3,7 @@
     <item android:state_enabled="true">
         <shape>
             <corners android:radius="22dp" />
-            <solid android:color="#ff2b3f" />
+            <solid android:color="@color/text_red" />
         </shape>
     </item>
 
