--- a/app/src/main/res/layout/activity_pkrecord.xml
+++ b/app/src/main/res/layout/activity_pkrecord.xml
@@ -41,7 +41,7 @@
                 android:id="@+id/tv_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textColor="#ff2b3f"
+                android:textColor="@color/text_red"
                 android:textSize="12sp"
                 android:textStyle="bold" />
         </LinearLayout>
@@ -205,7 +205,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="48小时"
-                        android:textColor="#ff2b3f"
+                        android:textColor="@color/text_red"
                         android:textSize="14sp" />
                 </LinearLayout>
 
