--- a/app/src/main/res/layout/dialog_card_black_room.xml
+++ b/app/src/main/res/layout/dialog_card_black_room.xml
@@ -76,7 +76,7 @@
                 android:layout_weight="1"
                 android:gravity="center"
                 android:text="确认拯救"
-                android:textColor="#ff2b3f"
+                android:textColor="@color/text_red"
                 android:textSize="13sp" />
         </LinearLayout>
     </LinearLayout>
