--- a/app/src/main/res/drawable/bg_live_pack_num.xml
+++ b/app/src/main/res/drawable/bg_live_pack_num.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-    <solid android:color="#ff2b3f" />
+    <solid android:color="@color/text_red" />
     <corners android:radius="10dp" />
 </shape>
