--- a/app/src/main/res/drawable/bg_text_item_free_dialog.xml
+++ b/app/src/main/res/drawable/bg_text_item_free_dialog.xml
@@ -2,5 +2,5 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="oval">
 
-    <solid android:color="#ff2b3f" />
+    <solid android:color="@color/text_red" />
 </shape>
