--- a/app/src/main/res/drawable/btn_going_free_gift.xml
+++ b/app/src/main/res/drawable/btn_going_free_gift.xml
@@ -5,5 +5,5 @@
     <corners android:radius="10dp" />
     <stroke
         android:width="1dp"
-        android:color="#ff2b3f" />
+        android:color="@color/text_red" />
 </shape>
