--- a/app/src/main/res/drawable/btn_receive_free_gift.xml
+++ b/app/src/main/res/drawable/btn_receive_free_gift.xml
@@ -2,6 +2,6 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
 
-    <solid android:color="#ff2b3f" />
+    <solid android:color="@color/text_red" />
     <corners android:radius="10dp" />
 </shape>
