--- a/app/src/main/res/drawable/shape_private_chat_time.xml
+++ b/app/src/main/res/drawable/shape_private_chat_time.xml
@@ -3,5 +3,5 @@
     android:shape="oval">
 
     <size android:height="18dp" android:width="18dp"/>
-    <solid android:color="#ff2b3f" />
+    <solid android:color="@color/text_red" />
 </shape>
