--- a/app/src/main/res/layout/activity_follow.xml
+++ b/app/src/main/res/layout/activity_follow.xml
@@ -30,7 +30,7 @@
             android:layout_gravity="right"
             android:layout_marginRight="17dp"
             android:gravity="center"
-            android:textColor="#ff2b3f"
+            android:textColor="@color/textcolor_white_toolbar_right"
             android:textSize="15sp" />
 
 
