--- a/app/src/main/res/layout/headtip_msg.xml
+++ b/app/src/main/res/layout/headtip_msg.xml
@@ -31,7 +31,7 @@
             android:layout_gravity="right"
             android:layout_marginRight="17dp"
             android:gravity="center"
-            android:textColor="#ff2b3f"
+            android:textColor="@color/text_red"
             android:textSize="15sp" />
 
 
