--- a/app/src/main/res/layout/item_follow_follow.xml
+++ b/app/src/main/res/layout/item_follow_follow.xml
@@ -55,7 +55,7 @@
                     android:layout_height="wrap_content"
                     android:background="@drawable/bg_playing_follow_follow"
                     android:text="直播中"
-                    android:textColor="#ff2b3f"
+                    android:textColor="@color/text_red"
                     android:textSize="10sp"
                     android:visibility="gone" />
 
