--- a/app/src/main/res/layout/item_private_chat_list.xml
+++ b/app/src/main/res/layout/item_private_chat_list.xml
@@ -42,7 +42,7 @@
         android:id="@+id/tv_delete"
         android:layout_width="65dp"
         android:layout_height="match_parent"
-        android:background="#ff2b3f"
+        android:background="@color/text_red"
         android:gravity="center"
         android:text="删除"
         android:textColor="#FFFFFFFF"
