--- a/app/src/main/res/layout/item_rule_no_money.xml
+++ b/app/src/main/res/layout/item_rule_no_money.xml
@@ -21,7 +21,7 @@
             android:id="@+id/tv_desc_no_money"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textColor="#ff2b3f"
+            android:textColor="@color/text_red"
             android:textSize="11sp" />
 
         <TextView
