--- a/app/src/main/res/layout/item_search_record.xml
+++ b/app/src/main/res/layout/item_search_record.xml
@@ -61,7 +61,7 @@
             android:layout_marginRight="12dp"
             android:gravity="center"
             android:text="直播中"
-            android:textColor="#ff2b3f"
+            android:textColor="@color/text_red"
             android:textSize="14sp"
             android:visibility="gone" />
     </RelativeLayout>
