--- a/app/src/main/res/layout/combo_gift_layout.xml
+++ b/app/src/main/res/layout/combo_gift_layout.xml
@@ -3,8 +3,7 @@
     android:id="@+id/gift_anim_view"
     android:layout_width="match_parent"
     android:layout_height="51dp"
-    android:layout_marginLeft="3dp"
-    android:layout_marginBottom="10dp">
+    android:layout_marginStart="3dp">
 
 
     <ImageView
