--- a/app/src/main/res/layout/combo_gift_layout.xml
+++ b/app/src/main/res/layout/combo_gift_layout.xml
@@ -92,7 +92,7 @@
         android:layout_toRightOf="@id/tv_combo_time_desc"
         android:gravity="bottom"
         android:paddingBottom="4dp"
-        android:text=" x "
+        android:text=" × "
         android:textColor="#faf9f9"
         android:textSize="25sp" />
 
