--- a/app/src/main/res/layout/dialog_guess.xml
+++ b/app/src/main/res/layout/dialog_guess.xml
@@ -53,8 +53,7 @@
 
             <FrameLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_marginTop="15dp">
+                android:layout_height="match_parent">
 
                 <FrameLayout
                     android:id="@+id/container_data"
