--- a/app/src/main/res/layout/dialog_guess_bet.xml
+++ b/app/src/main/res/layout/dialog_guess_bet.xml
@@ -22,6 +22,7 @@
             android:textSize="11sp" />
 
         <TextView
+            android:id="@+id/tv_get_guess_bet"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="0"
@@ -49,9 +50,10 @@
             android:textSize="11sp" />
 
         <TextView
+            android:id="@+id/tv_odd_guess_bet"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="1.10"
+            android:text="0"
             android:textColor="#FFF610"
             android:textSize="11sp" />
 
@@ -64,11 +66,13 @@
     </LinearLayout>
 
     <EditText
+        android:id="@+id/et_guess_bet"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="11dp"
         android:background="@drawable/edit_guess_bet"
         android:gravity="center"
+        android:hint="最小数量为100"
         android:inputType="number"
         android:maxLength="6"
         android:paddingTop="9dp"
@@ -84,6 +88,7 @@
         android:orientation="horizontal">
 
         <TextView
+            android:id="@+id/tv_1000_guess_bet"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginRight="6.5dp"
@@ -97,6 +102,7 @@
             android:textSize="12sp" />
 
         <TextView
+            android:id="@+id/tv_10000_guess_bet"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginRight="6.5dp"
@@ -110,6 +116,7 @@
             android:textSize="12sp" />
 
         <TextView
+            android:id="@+id/tv_50000_guess_bet"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginRight="6.5dp"
@@ -123,6 +130,7 @@
             android:textSize="12sp" />
 
         <TextView
+            android:id="@+id/tv_100000_guess_bet"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
