--- a/app/src/main/res/layout/pull_refresh_layout.xml
+++ b/app/src/main/res/layout/pull_refresh_layout.xml
@@ -6,7 +6,8 @@
     <com.scwang.smartrefresh.layout.SmartRefreshLayout
         android:id="@+id/smart_refresh"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:background="@color/white">
 
         <FrameLayout
             android:layout_width="match_parent"
