--- a/app/src/main/res/layout/dialog_guess.xml
+++ b/app/src/main/res/layout/dialog_guess.xml
@@ -25,6 +25,7 @@
                 android:layout_height="55dp">
 
                 <ImageView
+                    android:id="@+id/iv_rank_guess"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_centerVertical="true"
