--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -497,4 +497,11 @@
         <item name="android:textColor">#000000</item>
         <item name="android:textSize">13sp</item>
     </style>
+
+    <style name="GuessRankTab" parent="Widget.Design.TabLayout">
+        <item name="tabIndicatorHeight">2.5dp</item>
+        <item name="tabIndicatorColor">#fff710</item>
+        <item name="android:textSize">16sp</item>
+    </style>
+
 </resources>
